<resources>
    <string name="app_name">Training App</string>
    <!--    IMC App -->
    <string name="man">Hombre</string>
    <string name="women">Mujer</string>
    <string name="height">Altura</string>
    <string name="weight">Peso</string>
    <string name="age">Edad</string>
    <string name="calculate">Calcular</string>
    <string name="result">Tu resultado</string>
    <string name="re_calculate">Re-Calcular</string>
    <string name="errorImc">Error</string>
    <string name="low_weight">Bajo</string>
    <string name="normal_weight">Normal</string>
    <string name="over_weight">Sobrepeso</string>
    <string name="obesity">Obesidad</string>
    <string name="low_weight_text">Estás por debajo del peso ideal para tu altura.</string>
    <string name="normal_weight_text">Estás en peso ideal para tu altura.</string>
    <string name="over_weight_text">Estás ligeramente por encima del peso para tu altura</string>
    <string name="obesity_text">Estás muy por encima del peso para tu altura, acude al medico.</string>
    <!--    TODO_ App -->
    <string name="todo_list_title">TODO List</string>
    <string name="todo_categories">Categorias:</string>
    <string name="tasks">Tareas:</string>
    <string name="add_task">Añadir tarea</string>
    <string name="add_business">Negocios</string>
    <string name="add_personal">Personal</string>
    <string name="add_other">Otros</string>
    <string name="add_task_dialog">Tarea</string>
    <!--    Superhero App -->
    <string name="intelligent">Inteligencia</string>
    <string name="Strength">Fuerza</string>
    <string name="speed">Velocidad</string>
    <string name="durability">Durabilidad</string>
    <string name="power">Poder</string>
    <string name="combat">Combate</string>
    <string name="dark_mode">Modo oscuro</string>
    <string name="dark_mode_description">Activa/Desactiva modo oscuro para un cambio visual</string>
    <string name="bluetooth_title">Bluetooth</string>
    <string name="bluetooth_description">Activa/Desactiva configuración bluetooth</string>
    <string name="volumen_level">Nivel de volumen</string>
    <string name="vibrate_mode">Activar/Desactivar modo vibrar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="words_app_name">Words App</string>
    <string name="word_list_fragment_label">Words That Start With {letter}</string>
    <string name="detail_prefix">Words That Start With</string>
    <string name="action_switch_layout">Switch Layout</string>
    <string name="look_up_word">Look up word in a Browser Search</string>
    <string name="look_up_words">Show Stored Words</string>
    <!--    Unscramble App -->
    <string name="unscramble_app_name">Unscramble</string>
    <string name="instructions">Unscramble the word using all the letters.</string>
    <string name="skip">Skip</string>
    <string name="submit">Submit</string>
    <string name="score">Score: %d</string>
    <string name="word_count">%d of %d words</string>
    <string name="enter_your_word">Enter your word</string>
    <string name="congratulations">Congratulations!</string>
    <string name="you_scored">"You scored: %d"</string>
    <string name="exit">Exit</string>
    <string name="play_again">Play Again</string>
    <string name="try_again">Try again!</string>

    <!--    Cupcake App -->
    <string name="cupcake_app_name">Cupcake</string>
    <string name="order_cupcakes">Order Cupcakes</string>
    <string name="one_cupcake">One Cupcake</string>
    <string name="six_cupcakes">Six Cupcakes</string>
    <string name="twelve_cupcakes">Twelve Cupcakes</string>
    <string name="choose_flavor">Choose Flavor</string>
    <string name="vanilla">Vanilla</string>
    <string name="chocolate">Chocolate</string>
    <string name="red_velvet">Red Velvet</string>
    <string name="salted_caramel">Salted Caramel</string>
    <string name="coffee">Coffee</string>
    <string name="special_flavor">Special Flavor</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="choose_pickup_date">Choose Pickup Date</string>
    <string name="order_summary">Order Summary</string>
    <string name="send">Send Order to Another App</string>
    <string name="quantity">Quantity</string>
    <string name="flavor">Flavor</string>
    <string name="pickup_date">Pickup date</string>
    <string name="subtotal_price">Subtotal %s</string>
    <string name="total_price">Total %s</string>
    <string name="new_cupcake_order">New Cupcake Order</string>
    <string name="order_details">Quantity: %1$s \n Flavor: %2$s \nPickup date: %3$s \n
        Total: %4$s \n\n Thank you!</string>

    <plurals name="cupcakes">
        <item quantity="one">%d cupcake</item>
        <item quantity="other">%d cupcakes</item>
    </plurals>
    <!--    Bus App -->
    <string name="bus_app_name">Bus Schedule</string>
    <!-- Shown above left column listing bus stops in full schedule fragment -->
    <string name="bus_stop_header">Stop Name</string>
    <!-- Shown above right column listing arrival times in full schedule fragment -->
    <string name="arrival_time_header">Arrival Time</string>

    <!--    Inventory App -->
    <string name="inventory_app_name">Inventory</string>
    <string name="sell">Sell</string>
    <string name="quantity_in">Quantity in Stock:</string>
    <string name="quantity_req">Quantity in Stock <font color='#FF0000'>*</font></string>
    <string name="item_name_req">Item Name <font color='#FF0000'>*</font></string>
    <string name="item_price_req">Item Price <font color='#FF0000'>*</font></string>
    <string name="save_action">Save</string>
    <string name="item_detail_fragment_title">Item Details</string>
    <string name="add_fragment_title">Add Item</string>
    <string name="edit_fragment_title">Edit Item</string>
    <string name="price">Price</string>
    <string name="quantity_in_stock">Quantity\nIn Stock</string>
    <string name="item">Item</string>
    <string name="delete">Delete</string>
    <string name="delete_question">Are you sure you want to delete?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="currency_symbol">$</string>
    <string name="edit_item">Edit Item</string>
    <string name="add_new_item">Add new item</string>

    <!--    Horoscope App-->
    <string name="horoscope_app_name">Horoscope</string>
    <string name="horoscope_information">Information</string>
    <string name="horoscope_compatibility">Compatibility</string>
    <string name="horoscope_List">List</string>
    <string name="imc_app">IMC App</string>
    <string name="basics">Basics</string>
    <string name="todo_app">TODO App</string>
    <string name="recycler_view">Recycler View</string>
    <string name="superhero_app">Superhero App</string>
    <string name="rv_retrofit">RV-Retrofit</string>
    <string name="settings_app">Settings App</string>
    <string name="datastore">DataStore</string>
    <string name="words_app">Words App</string>
    <string name="nav_fragments">Nav-Fragments</string>
    <string name="unscramble_app">Unscramble App</string>
    <string name="mvvm_livedata">MVVM - LiveData</string>
    <string name="cupcake_app">Cupcake App</string>
    <string name="advanced_nav_frags">Advanced Nav-Frags</string>
    <string name="bus_schedule_app">Bus Schedule App</string>
    <string name="room_flow">ROOM-Flow</string>
    <string name="inventory_app">Inventory App</string>
    <string name="advanced_room">Advanced ROOM</string>
    <string name="horoscope_app">Horoscope App</string>
    <string name="clean_arch">Clean Arch</string>
    <string name="quote_app">Quote App</string>
    <string name="clean_arch_2">Clean Arch 2</string>
</resources>