<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/horoscope_nav_graph"
    app:startDestination="@id/listFragment">

    <fragment
        android:id="@+id/listFragment"
        android:name="com.example.calculator.horoscopeapp.ui.list.ListFragment"
        android:label="@string/horoscope_List"
        tools:layout="@layout/fragment_list" />
    <fragment
        android:id="@+id/compatibilityFragment"
        android:name="com.example.calculator.horoscopeapp.ui.compatibility.CompatibilityFragment"
        android:label="@string/horoscope_compatibility"
        tools:layout="@layout/fragment_compatibility" />
    <fragment
        android:id="@+id/informationFragment"
        android:name="com.example.calculator.horoscopeapp.ui.information.InformationFragment"
        android:label="@string/horoscope_information"
        tools:layout="@layout/fragment_information" />
</navigation>