<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cupcake_nav_graph"
    app:startDestination="@id/startFragment">

    <fragment
        android:id="@+id/startFragment"
        android:name="com.example.calculator.cukcakeapp.StartFragment"
        android:label="@string/cupcake_app_name">
        <action
            android:id="@+id/action_startFragment_to_flavorFragment"
            app:destination="@id/flavorFragment" />
    </fragment>
    <fragment
        android:id="@+id/flavorFragment"
        android:name="com.example.calculator.cukcakeapp.FlavorFragment"
        android:label="@string/choose_flavor">
        <action
            android:id="@+id/action_flavorFragment_to_pickupFragment"
            app:destination="@id/pickupFragment" />
        <action
            android:id="@+id/action_flavorFragment_to_startFragment"
            app:destination="@id/startFragment"
            app:popUpTo="@id/startFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/pickupFragment"
        android:name="com.example.calculator.cukcakeapp.PickupFragment"
        android:label="@string/choose_pickup_date">
        <action
            android:id="@+id/action_pickupFragment_to_summaryFragment"
            app:destination="@id/summaryFragment" />
        <action
            android:id="@+id/action_pickupFragment_to_startFragment"
            app:destination="@id/startFragment"
            app:popUpTo="@id/startFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/summaryFragment"
        android:name="com.example.calculator.cukcakeapp.SummaryFragment"
        android:label="@string/order_summary" >
        <action
            android:id="@+id/action_summaryFragment_to_startFragment"
            app:destination="@id/startFragment"
            app:popUpTo="@id/startFragment"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>