<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".superheroapp.DetailSuperheroActivity">

    <ImageView
        android:id="@+id/ivSuperhero"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:cardCornerRadius="22dp"
        android:elevation="8dp"
        android:layout_marginTop="235dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/tvSuperheroName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="28sp"
                android:layout_marginTop="8dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:gravity="center_horizontal"
                tools:text="Ronald Melo"
                />

            <TextView
                android:id="@+id/tvSuperheroRealName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="italic"
                android:textColor="@color/black"
                android:gravity="center_horizontal"
                tools:text="Ronald Melo"
                />

            <TextView
                android:id="@+id/tvSuperheroPublisher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textStyle="italic"
                android:gravity="center"
                tools:text="Ronald Melo"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="horizontal"
                android:layout_marginTop="24dp"
                android:gravity="bottom"

                >
                <View
                    android:id="@+id/viewIntelligence"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="@color/superhero_stat_intelligence"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"/>
                <View
                    android:id="@+id/viewStrength"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="@color/superhero_stat_strength"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"/>
                <View
                    android:id="@+id/viewSpeed"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="@color/superhero_stat_speed"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"/>
                <View
                    android:id="@+id/viewDurability"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="@color/superhero_stat_durability"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"/>
                <View
                    android:id="@+id/viewPower"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="@color/superhero_stat_power"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"/>
                <View
                    android:id="@+id/viewCombat"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="@color/superhero_stat_combat"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"/>

            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="12dp"
            android:gravity="bottom"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/intelligent"
                android:textSize="11sp"
                android:layout_marginHorizontal="4dp"
                android:textAlignment="center"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/Strength"
                android:textSize="11sp"
                android:layout_marginHorizontal="4dp"
                android:textAlignment="center"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/speed"
                android:textSize="11sp"
                android:layout_marginHorizontal="4dp"
                android:textAlignment="center"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/durability"
                android:textSize="11sp"
                android:layout_marginHorizontal="4dp"
                android:textAlignment="center"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/power"
                android:textSize="11sp"
                android:layout_marginHorizontal="4dp"
                android:textAlignment="center"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/combat"
                android:textSize="11sp"
                android:layout_marginHorizontal="4dp"
                android:textAlignment="center"
                android:layout_weight="1"/>
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>